gitops/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    deployment: vllm
  name: vllm
spec:
  ports:
  - name: vllm
    port: 8000
    targetPort: 8000
  selector:
    deployment: vllm
  sessionAffinity: None
  type: ClusterIP
