gitops/base/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: vllm
  labels:
    deployment: vllm
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  port:
    targetPort: 8000
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: vllm
    weight: 100
  wildcardPolicy: None
